--- a/haskell-exercises.cabal
+++ b/haskell-exercises.cabal
@@ -15,10 +15,14 @@ build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
 
-executable haskell-exercises
-  -- main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
+executable monadplus
+  main-is:             MonadPlusExamples.hs
   build-depends:       base >=4.6 && <4.7
-  -- hs-source-dirs:  .    
   default-language:    Haskell2010
+executable writer
+  main-is:             WriterMonad.hs
+  build-depends:       base >=4.6 && <4.7,
+                       mtl
+  default-language:    Haskell2010
+
+
