--- a/haskell-exercises.cabal
+++ b/haskell-exercises.cabal
@@ -16,13 +16,15 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 executable monadplus
-  main-is:             MonadPlusExamples.hs
+  main-is:             monadplus.hs
   build-depends:       base >=4.6 && <4.7
   default-language:    Haskell2010
 executable writer
-  main-is:             WriterMonad.hs
-  build-depends:       base >=4.6 && <4.7,
-                       mtl
+  main-is:             writer.hs
+  build-depends:       base >=4.6 && <4.7, mtl
   default-language:    Haskell2010
-
+executable reader
+  main-is:             reader.hs
+  build-depends:       base >=4.6 && <4.7, mtl
+  default-language:    Haskell2010
 
