--- a/haskell-exercises.cabal
+++ b/haskell-exercises.cabal
@@ -66,3 +66,13 @@ executable monadsupply
       mtl,
       random
   default-language:   Haskell2010
+
+executable async
+  main-is: async.hs
+  build-depends:
+      base >= 4.6 && < 4.7,
+      mtl,
+      async,
+      curl >= 1.3.8
+  default-language:   Haskell2010
+
