--- a/haskell-exercises.cabal
+++ b/haskell-exercises.cabal
@@ -76,3 +76,11 @@ executable async
       curl >= 1.3.8
   default-language:   Haskell2010
 
+executable attoparsec
+  main-is: attoparsec.hs
+  build-depends:
+      base >= 4.6 && < 4.7,
+      attoparsec
+  default-language:   Haskell2010
+
+
