--- a/haskell-exercises.cabal
+++ b/haskell-exercises.cabal
@@ -13,7 +13,7 @@ maintainer:          dhchoi@gmail.com
 -- category:            
 build-type:          Simple
 -- extra-source-files:  
-cabal-version:       >=1.10
+cabal-version:       >=1.18
 
 executable monadplus
   main-is:             monadplus.hs
@@ -84,4 +84,8 @@ executable attoparsec
       text
   default-language:   Haskell2010
 
+
+executable hashdbc
+  main-is: hashdbc.hs
+  build-depends: snaplet-hdbc
 
